--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 # Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
 duckdb
 apache-airflow-providers-docker
+google-cloud-bigquery-storage
+apache-airflow-providers-google
